# PressureTumorAI

./: .conda_config  .gitignore  README.md  environment.yml  ntest.py  pyproject.toml  requirements.txt  test.py
ArUco/: brawlhallaTemp.py  localization.py
arucoMarkers/: localization.py  markerGen.py
calibration/: dataCollect.py  getCameraCoeffs.py
data/: pressure_metrics.csv
data/marker_dataset/: cubeGeneration.py  printOut.docx
doc/: Carnegie Mellon University IRB Approval.docx  Dartmouth College IRB Approval.docx  Novel Detection of Tumors using Pressure.docx
localization/: cubeTrack.py
pressuretumorai/: main.py
pressuretumorai/aruco_markers/: markerGen.py
pressuretumorai/aruco_markers/markers/: cubeGeneration.py
pressuretumorai/calibration/: cameraCoeffs.pickle  camera_coeffs.py
pressuretumorai/data/: pressure_metrics.csv
pressuretumorai/lidar_system/: lidar_camera.py  super_resolution.py
pressuretumorai/localization/: cubeTrack.py  cube_tracking.py  stylus.py
pressuretumorai/localization/POC/: cube_tracking.py
pressuretumorai/pressure_sensing/: web_server.py
pressuretumorai/pressure_sensing/POC/: web_server.py
pressuretumorai/pressure_sensing/data_collection/: boot.py  network_transmission.py
pressuretumorai/utils/: filewriter.py  plotter.py
src/: main.py
src/dashboard/: dash.py  gui.py  test.py
src/dashboard/concurrency/: image_recv.py  network_status_recv.py  position_recv.py  pressure.py  pressure_recv.py
src/data_processing/: filewriter.py  graph.py  plotter.py
src/email_outreach/: contacts.csv  send_email.py
src/ipc_broker/: socket_comms.py  socket_init.py
src/localization/: aruco_tracking.py  camera_init.py  frame_streamer.py  stylus.py
src/microcontroller/: boot.py  network_transmission.py
src/web_server/: ping.py  web_server.py
test/dashboard/: winsize.py
test/graphing/: animated_graph.py
test/localization/: multiprocessing_test.py
test/web_server/: web_server.py
(+5 files in other folders)
