[tool.poetry]
name = "pressure-based-tumor-detection"
version = "0.1.0"
description = "Using Aruco tracking to localize a system to try to localize tumors using pressure values."
authors = ["Aditya Mangalampalli <aditya.mangalampalli@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
opencv-contrib-python = "^4.5.3"
numpy = "^1.21.1"
TauLidarServer = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
