[tool.poetry]
name = "pressure-based-tumor-detection"
version = "0.1.0"
description = "Using Aruco tracking to localize a system to try to localize tumors using pressure values."
authors = ["Aditya Mangalampalli <aditya.mangalampalli@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.8"
TauLidarServer = "^0.0.7"
black = "^21.7b0"
tensorflow-macos = "^2.5.0"
tensorflow-metal = "^0.1.2"
opencv-python = "4.5.1.48"
opencv-contrib-python = "4.5.1.48"
esptool = "^3.1"
adafruit-ampy = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
